homelab-v8/apps/go-hello/devops/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-hello
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-hello
  template:
    metadata:
      labels:
        app: go-hello
    spec:
      containers:
        - name: go-hello
          image: registry.wguilherme.com/go-hello:20260523230455-14cf13c2 # {"$imagepolicy": "flux-system:go-hello"}
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 10
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi
