homelab-v8/apps/go-hello/devops/deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-hello
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: go.wguilherme.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go-hello
                port:
                  number: 80
